--- a/tsconfig.json
+++ b/tsconfig.json
@@ -43,7 +43,10 @@
       "*": ["src/*"],
       "tests": ["tests/*"],
       "@components/*": ["src/components/*"],
-      "@styles": ["src/styles/*"]
+      "@styles": ["src/styles/*"],
+      "@helpers": ["src/helpers/*"],
+      "@screens": ["src/screens/*"],
+      "@constants": ["src/constants/*"]
     } /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */,
     // "rootDirs": [],                        /* List of root folders whose combined content represents the structure of the project at runtime. */
     // "typeRoots": [],                       /* List of folders to include type definitions from. */
