--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-seoul/masonry-list": "^1.0.7",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.0.7",
+    "@types/react-native-vector-icons": "^6.4.8",
     "babel-plugin-module-resolver": "^4.1.0",
     "react": "17.0.2",
     "react-native": "0.65.1",
